tests/dupe-var-fun/out.txt
error: duplicate value: x
  ┌─ err.sml:1:11
  │
1 │ fun f (x, x) = 3
  │           ^

typechecking failed
